5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4191/executions/1764_1189.log
== TEST (2019-05-25 12:07:27) 
-- CODE:
from numpy import *

vt=array(input("Caracteres")
			
print(replace(vt))			
-- ERROR:
File "XXXX", line 5
    print(replace(vt))			
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 12:09:07) 
-- CODE:
from numpy import *

vt=array(input("Caracteres")
			
new=vt.replace(' ')
			
print(new)
-- ERROR:
File "XXXX", line 5
    new=vt.replace(' ')
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 12:09:53) 
-- CODE:
from numpy import *

vt=array(input("Caracteres")
			
new=vt.replace(' ', '')
			
print(new)
-- ERROR:
File "XXXX", line 5
    new=vt.replace(' ', '')
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 12:10:16) 
-- CODE:
from numpy import *

vt=input("Caracteres")
			
new=vt.replace(' ')
			
print(new)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 12:10:36) 
-- CODE:
from numpy import *

vt=input("Caracteres")
			
new=vt.replace(' ', '')
			
print(new)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 12:11:15) 
-- CODE:
from numpy import *

vt=input("Caracteres")
			
new=vt.replace(' ', '')
			
print(new)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 12:11:32) 
-- CODE:
from numpy import *

vt=input("Caracteres")
			
new=vt.replace(' ', '')
			
print(new)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 12:11:43) 
-- CODE:
from numpy import *

vt=input("Caracteres: ")
			
new=vt.replace(' ', '')
			
print(new)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 12:18:14) 
-- CODE:
from numpy import *

vt=input("Caracteres: ")
			
new=vt.replace(' ', '')
			
print(new)

if(vt[0]==vt[-1])
-- EXECUTION TIME:
0.187509
-- ERROR:
  File "/home/codebench/codes/1764/1189/main.py", line 9
    if(vt[0]==vt[-1])
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:44:59) 
-- CODE:
from numpy import *

vt=input("Caracteres: ")

new=vt.replace(' ', '')
cont=0
i=-1
			
while(cont<len(vt)):
	if(vt[cont]==vt[i]):
		cont=cont+1
		i=i-1
		if(vt[cont]==vt[i]):
			num=1
		else:
			num=0
	print(vt)
	print(num)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:45:01) 
-- CODE:
from numpy import *

vt=input("Caracteres: ")

new=vt.replace(' ', '')
cont=0
i=-1
			
while(cont<len(vt)):
	if(vt[cont]==vt[i]):
		cont=cont+1
		i=i-1
		if(vt[cont]==vt[i]):
			num=1
		else:
			num=0
print(vt)
print(num)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:45:34) 
-- CODE:
from numpy import *

vt=input("Caracteres: ")

new=vt.replace(' ', '')
cont=0
i=-1
			
while(cont<len(vt)):
	if(vt[cont]==vt[i]):
		cont=cont+1
		i=i-1
		if(vt[cont]==vt[i]):
			num=1
		else:
			num=0
print(vt)
print(num)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:01:17) 
-- CODE:
from numpy import *

vt=input("Caracteres: ")

new=vt.replace(' ', '')
cont=0
i=-1
			
while(cont<len(vt)):
	if(vt[cont]==vt[i]):
		cont=cont+1
		i=i-1
		if(vt[cont]==vt[i]):
			num=1
		else:
			num=0
print(vt)
print(num)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:02:20) 
-- CODE:
from numpy import *

vt=input("Caracteres: ").upper()

new=vt.replace(' ', '')
 print(new)
-- ERROR:
File "XXXX", line 6
    print(new)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:02:24) 
-- CODE:
from numpy import *

vt=input("Caracteres: ").upper()

new=vt.replace(' ', '')
print(new)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:02:42) 
-- CODE:
from numpy import *

vt=input("Caracteres: ").upper()

new=vt.replace(' ', '')
print(new)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:03:01) 
-- CODE:
from numpy import *

vt=input("Caracteres: ").upper()

new=vt.replace(' ', '')

cont=0
i=-1
			
while(cont<len(vt)):
	if(vt[cont]==vt[i]):
		cont=cont+1
		i=i-1
		if(vt[cont]==vt[i]):
			num=1
		else:
			num=0
print(new)
print(num)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:03:20) 
-- CODE:
from numpy import *

vt=input("Caracteres: ").upper()

new=vt.replace(' ', '')

cont=0
i=-1
			
while(cont<len(new)):
	if(vt[cont]==vt[i]):
		cont=cont+1
		i=i-1
		if(vt[cont]==vt[i]):
			num=1
		else:
			num=0
print(new)
print(num)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
